--- a/lambda/custom/package.json
+++ b/lambda/custom/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "alexa-remote-api-example-skill",
+  "name": "ask-custom-look-demo-default",
   "version": "1.0.0",
   "description": "An example Alexa skill that shows how to call an external API",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Dabble Lab",
+  "author": "nTuring Technologies Private Limited",
   "license": "ISC",
   "dependencies": {
     "ask-sdk-core": "^2.9.0",
